tests/sema/negative/enum_member_on_unknown_enum.nv
fn main() : void {
    let x : int = Missing.Value;
    return;
}
